most recent version

--- a/carla_dynamics_plugin/scripts/latex/d1/d31/classscripts_1_1agents_1_1navigation_1_1agent_1_1Agent.tex
+++ b/carla_dynamics_plugin/scripts/latex/d1/d31/classscripts_1_1agents_1_1navigation_1_1agent_1_1Agent.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1agents_1_1navigation_1_1agent_1_1Agent}\index{scripts.\+agents.\+navigation.\+agent.\+Agent@{scripts.\+agents.\+navigation.\+agent.\+Agent}}
 
 
-Inheritance diagram for scripts.\+agents.\+navigation.\+agent.\+Agent\+:
-\nopagebreak
+Inheritance diagram for scripts.\+agents.\+navigation.\+agent.\+Agent\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+agents.\+navigation.\+agent.\+Agent\+:
 \end{figure}
 
 
-Collaboration diagram for scripts.\+agents.\+navigation.\+agent.\+Agent\+:
-\nopagebreak
+Collaboration diagram for scripts.\+agents.\+navigation.\+agent.\+Agent\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
