--- a/carla_dynamics_plugin/scripts/latex/d4/d58/classscripts_1_1osu__modules_1_1dynamics_1_1vel__control_1_1VehicleVelocityControl.tex
+++ b/carla_dynamics_plugin/scripts/latex/d4/d58/classscripts_1_1osu__modules_1_1dynamics_1_1vel__control_1_1VehicleVelocityControl.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1osu__modules_1_1dynamics_1_1vel__control_1_1VehicleVelocityControl}\index{scripts.\+osu\+\_\+modules.\+dynamics.\+vel\+\_\+control.\+Vehicle\+Velocity\+Control@{scripts.\+osu\+\_\+modules.\+dynamics.\+vel\+\_\+control.\+Vehicle\+Velocity\+Control}}
 
 
-Inheritance diagram for scripts.\+osu\+\_\+modules.\+dynamics.\+vel\+\_\+control.\+Vehicle\+Velocity\+Control\+:
-\nopagebreak
+Inheritance diagram for scripts.\+osu\+\_\+modules.\+dynamics.\+vel\+\_\+control.\+Vehicle\+Velocity\+Control\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+osu\+\_\+modules.\+dynamics.\+vel\+\_\+control
 \end{figure}
 
 
-Collaboration diagram for scripts.\+osu\+\_\+modules.\+dynamics.\+vel\+\_\+control.\+Vehicle\+Velocity\+Control\+:
-\nopagebreak
+Collaboration diagram for scripts.\+osu\+\_\+modules.\+dynamics.\+vel\+\_\+control.\+Vehicle\+Velocity\+Control\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
