--- a/carla_dynamics_plugin/scripts/latex/d4/db3/classscripts_1_1osu__modules_1_1nav_1_1planner_1_1Plan.tex
+++ b/carla_dynamics_plugin/scripts/latex/d4/db3/classscripts_1_1osu__modules_1_1nav_1_1planner_1_1Plan.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1osu__modules_1_1nav_1_1planner_1_1Plan}\index{scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Plan@{scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Plan}}
 
 
-Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Plan\+:
-\nopagebreak
+Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Plan\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Plan\+:
 \end{figure}
 
 
-Collaboration diagram for scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Plan\+:
-\nopagebreak
+Collaboration diagram for scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Plan\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
