--- a/carla_dynamics_plugin/scripts/latex/d5/d22/classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1__AgentState.tex
+++ b/carla_dynamics_plugin/scripts/latex/d5/d22/classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1__AgentState.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1__AgentState}\index{scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+\_\+\+Agent\+State@{scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+\_\+\+Agent\+State}}
 
 
-Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+\_\+\+Agent\+State\+:
-\nopagebreak
+Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+\_\+\+Agent\+State\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+\_\+\+Agent\
 \end{figure}
 
 
-Collaboration diagram for scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+\_\+\+Agent\+State\+:
-\nopagebreak
+Collaboration diagram for scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+\_\+\+Agent\+State\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
