--- a/carla_dynamics_plugin/scripts/latex/d6/d7d/classscripts_1_1agents_1_1navigation_1_1agent_1_1AgentState.tex
+++ b/carla_dynamics_plugin/scripts/latex/d6/d7d/classscripts_1_1agents_1_1navigation_1_1agent_1_1AgentState.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1agents_1_1navigation_1_1agent_1_1AgentState}\index{scripts.\+agents.\+navigation.\+agent.\+Agent\+State@{scripts.\+agents.\+navigation.\+agent.\+Agent\+State}}
 
 
-Inheritance diagram for scripts.\+agents.\+navigation.\+agent.\+Agent\+State\+:
-\nopagebreak
+Inheritance diagram for scripts.\+agents.\+navigation.\+agent.\+Agent\+State\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+agents.\+navigation.\+agent.\+Agent\+State\+:
 \end{figure}
 
 
-Collaboration diagram for scripts.\+agents.\+navigation.\+agent.\+Agent\+State\+:
-\nopagebreak
+Collaboration diagram for scripts.\+agents.\+navigation.\+agent.\+Agent\+State\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
