--- a/carla_dynamics_plugin/scripts/latex/d7/d92/classscripts_1_1osu__modules_1_1tools_1_1robotic__helper_1_1RoboticHelper.tex
+++ b/carla_dynamics_plugin/scripts/latex/d7/d92/classscripts_1_1osu__modules_1_1tools_1_1robotic__helper_1_1RoboticHelper.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1osu__modules_1_1tools_1_1robotic__helper_1_1RoboticHelper}\index{scripts.\+osu\+\_\+modules.\+tools.\+robotic\+\_\+helper.\+Robotic\+Helper@{scripts.\+osu\+\_\+modules.\+tools.\+robotic\+\_\+helper.\+Robotic\+Helper}}
 
 
-Inheritance diagram for scripts.\+osu\+\_\+modules.\+tools.\+robotic\+\_\+helper.\+Robotic\+Helper\+:
-\nopagebreak
+Inheritance diagram for scripts.\+osu\+\_\+modules.\+tools.\+robotic\+\_\+helper.\+Robotic\+Helper\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+osu\+\_\+modules.\+tools.\+robotic\+\_\+helper
 \end{figure}
 
 
-Collaboration diagram for scripts.\+osu\+\_\+modules.\+tools.\+robotic\+\_\+helper.\+Robotic\+Helper\+:
-\nopagebreak
+Collaboration diagram for scripts.\+osu\+\_\+modules.\+tools.\+robotic\+\_\+helper.\+Robotic\+Helper\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
