--- a/carla_dynamics_plugin/scripts/latex/d8/d0f/classscripts_1_1agents_1_1navigation_1_1local__planner_1_1RoadOption.tex
+++ b/carla_dynamics_plugin/scripts/latex/d8/d0f/classscripts_1_1agents_1_1navigation_1_1local__planner_1_1RoadOption.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1agents_1_1navigation_1_1local__planner_1_1RoadOption}\index{scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Road\+Option@{scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Road\+Option}}
 
 
-Inheritance diagram for scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Road\+Option\+:
-\nopagebreak
+Inheritance diagram for scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Road\+Option\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Roa
 \end{figure}
 
 
-Collaboration diagram for scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Road\+Option\+:
-\nopagebreak
+Collaboration diagram for scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Road\+Option\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
