--- a/carla_dynamics_plugin/scripts/latex/d8/d8a/classscripts_1_1osu__modules_1_1dynamics_1_1av_1_1AV.tex
+++ b/carla_dynamics_plugin/scripts/latex/d8/d8a/classscripts_1_1osu__modules_1_1dynamics_1_1av_1_1AV.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1osu__modules_1_1dynamics_1_1av_1_1AV}\index{scripts.\+osu\+\_\+modules.\+dynamics.\+av.\+AV@{scripts.\+osu\+\_\+modules.\+dynamics.\+av.\+AV}}
 
 
-Inheritance diagram for scripts.\+osu\+\_\+modules.\+dynamics.\+av.\+AV\+:
-\nopagebreak
+Inheritance diagram for scripts.\+osu\+\_\+modules.\+dynamics.\+av.\+AV\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+osu\+\_\+modules.\+dynamics.\+av.\+AV\+:
 \end{figure}
 
 
-Collaboration diagram for scripts.\+osu\+\_\+modules.\+dynamics.\+av.\+AV\+:
-\nopagebreak
+Collaboration diagram for scripts.\+osu\+\_\+modules.\+dynamics.\+av.\+AV\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -25,6 +23,9 @@ Collaboration diagram for scripts.\+osu\+\_\+modules.\+dynamics.\+av.\+AV\+:
 \item 
 \mbox{\Hypertarget{classscripts_1_1osu__modules_1_1dynamics_1_1av_1_1AV_a89f85341e7a2c217b2e394eb0f9d8816}\label{classscripts_1_1osu__modules_1_1dynamics_1_1av_1_1AV_a89f85341e7a2c217b2e394eb0f9d8816}} 
 def {\bfseries \+\_\+\+\_\+init\+\_\+\+\_\+} (self, world, vehicle\+\_\+local)
+\item 
+\mbox{\Hypertarget{classscripts_1_1osu__modules_1_1dynamics_1_1av_1_1AV_ae62930be9e30009618ed3c44da277afe}\label{classscripts_1_1osu__modules_1_1dynamics_1_1av_1_1AV_ae62930be9e30009618ed3c44da277afe}} 
+def {\bfseries run\+\_\+step} (self)
 \end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
