--- a/carla_dynamics_plugin/scripts/latex/db/d98/classscripts_1_1agents_1_1navigation_1_1roaming__agent_1_1RoamingAgent.tex
+++ b/carla_dynamics_plugin/scripts/latex/db/d98/classscripts_1_1agents_1_1navigation_1_1roaming__agent_1_1RoamingAgent.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1agents_1_1navigation_1_1roaming__agent_1_1RoamingAgent}\index{scripts.\+agents.\+navigation.\+roaming\+\_\+agent.\+Roaming\+Agent@{scripts.\+agents.\+navigation.\+roaming\+\_\+agent.\+Roaming\+Agent}}
 
 
-Inheritance diagram for scripts.\+agents.\+navigation.\+roaming\+\_\+agent.\+Roaming\+Agent\+:
-\nopagebreak
+Inheritance diagram for scripts.\+agents.\+navigation.\+roaming\+\_\+agent.\+Roaming\+Agent\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+agents.\+navigation.\+roaming\+\_\+agent.\+Roa
 \end{figure}
 
 
-Collaboration diagram for scripts.\+agents.\+navigation.\+roaming\+\_\+agent.\+Roaming\+Agent\+:
-\nopagebreak
+Collaboration diagram for scripts.\+agents.\+navigation.\+roaming\+\_\+agent.\+Roaming\+Agent\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
