--- a/carla_dynamics_plugin/scripts/latex/db/dc4/classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1Roamer.tex
+++ b/carla_dynamics_plugin/scripts/latex/db/dc4/classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1Roamer.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1Roamer}\index{scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+Roamer@{scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+Roamer}}
 
 
-Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+Roamer\+:
-\nopagebreak
+Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+Roamer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+Roamer\+:
 \end{figure}
 
 
-Collaboration diagram for scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+Roamer\+:
-\nopagebreak
+Collaboration diagram for scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+Roamer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -26,8 +24,8 @@ Collaboration diagram for scripts.\+osu\+\_\+modules.\+nav.\+roamer.\+Roamer\+:
 \mbox{\Hypertarget{classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1Roamer_a7d390a18bb34cf8ccec5dc8052f96c2f}\label{classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1Roamer_a7d390a18bb34cf8ccec5dc8052f96c2f}} 
 def {\bfseries \+\_\+\+\_\+init\+\_\+\+\_\+} (self, vehicle)
 \item 
-\mbox{\Hypertarget{classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1Roamer_a0cf7fcd777b2a1062cc1524f40762bfc}\label{classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1Roamer_a0cf7fcd777b2a1062cc1524f40762bfc}} 
-def {\bfseries run\+\_\+step} (self)
+\mbox{\Hypertarget{classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1Roamer_ab80437b43470af71e024f6a6f4906a86}\label{classscripts_1_1osu__modules_1_1nav_1_1roamer_1_1Roamer_ab80437b43470af71e024f6a6f4906a86}} 
+def {\bfseries roamer\+\_\+run\+\_\+step} (self)
 \end{DoxyCompactItemize}
 \subsection*{Additional Inherited Members}
 
