--- a/carla_dynamics_plugin/scripts/latex/dc/d3b/classscripts_1_1osu__modules_1_1nav_1_1navigator_1_1Nav.tex
+++ b/carla_dynamics_plugin/scripts/latex/dc/d3b/classscripts_1_1osu__modules_1_1nav_1_1navigator_1_1Nav.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1osu__modules_1_1nav_1_1navigator_1_1Nav}\index{scripts.\+osu\+\_\+modules.\+nav.\+navigator.\+Nav@{scripts.\+osu\+\_\+modules.\+nav.\+navigator.\+Nav}}
 
 
-Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+navigator.\+Nav\+:
-\nopagebreak
+Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+navigator.\+Nav\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+navigator.\+Nav\+:
 \end{figure}
 
 
-Collaboration diagram for scripts.\+osu\+\_\+modules.\+nav.\+navigator.\+Nav\+:
-\nopagebreak
+Collaboration diagram for scripts.\+osu\+\_\+modules.\+nav.\+navigator.\+Nav\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
