--- a/carla_dynamics_plugin/scripts/latex/dc/dbf/classscripts_1_1agents_1_1navigation_1_1global__route__planner_1_1GlobalRoutePlanner.tex
+++ b/carla_dynamics_plugin/scripts/latex/dc/dbf/classscripts_1_1agents_1_1navigation_1_1global__route__planner_1_1GlobalRoutePlanner.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1agents_1_1navigation_1_1global__route__planner_1_1GlobalRoutePlanner}\index{scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner.\+Global\+Route\+Planner@{scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner.\+Global\+Route\+Planner}}
 
 
-Inheritance diagram for scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner.\+Global\+Route\+Planner\+:
-\nopagebreak
+Inheritance diagram for scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner.\+Global\+Route\+Planner\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+p
 \end{figure}
 
 
-Collaboration diagram for scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner.\+Global\+Route\+Planner\+:
-\nopagebreak
+Collaboration diagram for scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner.\+Global\+Route\+Planner\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
