--- a/carla_dynamics_plugin/scripts/latex/de/d91/classscripts_1_1agents_1_1navigation_1_1basic__agent_1_1BasicAgent.tex
+++ b/carla_dynamics_plugin/scripts/latex/de/d91/classscripts_1_1agents_1_1navigation_1_1basic__agent_1_1BasicAgent.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1agents_1_1navigation_1_1basic__agent_1_1BasicAgent}\index{scripts.\+agents.\+navigation.\+basic\+\_\+agent.\+Basic\+Agent@{scripts.\+agents.\+navigation.\+basic\+\_\+agent.\+Basic\+Agent}}
 
 
-Inheritance diagram for scripts.\+agents.\+navigation.\+basic\+\_\+agent.\+Basic\+Agent\+:
-\nopagebreak
+Inheritance diagram for scripts.\+agents.\+navigation.\+basic\+\_\+agent.\+Basic\+Agent\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+agents.\+navigation.\+basic\+\_\+agent.\+Basic
 \end{figure}
 
 
-Collaboration diagram for scripts.\+agents.\+navigation.\+basic\+\_\+agent.\+Basic\+Agent\+:
-\nopagebreak
+Collaboration diagram for scripts.\+agents.\+navigation.\+basic\+\_\+agent.\+Basic\+Agent\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
