--- a/carla_dynamics_plugin/scripts/latex/df/d7a/classscripts_1_1agents_1_1navigation_1_1global__route__planner__dao_1_1GlobalRoutePlannerDAO.tex
+++ b/carla_dynamics_plugin/scripts/latex/df/d7a/classscripts_1_1agents_1_1navigation_1_1global__route__planner__dao_1_1GlobalRoutePlannerDAO.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1agents_1_1navigation_1_1global__route__planner__dao_1_1GlobalRoutePlannerDAO}\index{scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner\+\_\+dao.\+Global\+Route\+Planner\+D\+AO@{scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner\+\_\+dao.\+Global\+Route\+Planner\+D\+AO}}
 
 
-Inheritance diagram for scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner\+\_\+dao.\+Global\+Route\+Planner\+D\+AO\+:
-\nopagebreak
+Inheritance diagram for scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner\+\_\+dao.\+Global\+Route\+Planner\+D\+AO\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+p
 \end{figure}
 
 
-Collaboration diagram for scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner\+\_\+dao.\+Global\+Route\+Planner\+D\+AO\+:
-\nopagebreak
+Collaboration diagram for scripts.\+agents.\+navigation.\+global\+\_\+route\+\_\+planner\+\_\+dao.\+Global\+Route\+Planner\+D\+AO\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
