--- a/carla_dynamics_plugin/scripts/latex/df/dbe/classscripts_1_1agents_1_1navigation_1_1local__planner_1_1LocalPlanner.tex
+++ b/carla_dynamics_plugin/scripts/latex/df/dbe/classscripts_1_1agents_1_1navigation_1_1local__planner_1_1LocalPlanner.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1agents_1_1navigation_1_1local__planner_1_1LocalPlanner}\index{scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Local\+Planner@{scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Local\+Planner}}
 
 
-Inheritance diagram for scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Local\+Planner\+:
-\nopagebreak
+Inheritance diagram for scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Local\+Planner\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Loc
 \end{figure}
 
 
-Collaboration diagram for scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Local\+Planner\+:
-\nopagebreak
+Collaboration diagram for scripts.\+agents.\+navigation.\+local\+\_\+planner.\+Local\+Planner\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
