--- a/carla_dynamics_plugin/scripts/latex/d5/d4a/classscripts_1_1osu__modules_1_1nav_1_1planner_1_1RoadOption.tex
+++ b/carla_dynamics_plugin/scripts/latex/d5/d4a/classscripts_1_1osu__modules_1_1nav_1_1planner_1_1RoadOption.tex
@@ -2,8 +2,7 @@
 \label{classscripts_1_1osu__modules_1_1nav_1_1planner_1_1RoadOption}\index{scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Road\+Option@{scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Road\+Option}}
 
 
-Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Road\+Option\+:
-\nopagebreak
+Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Road\+Option\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Road\+Optio
 \end{figure}
 
 
-Collaboration diagram for scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Road\+Option\+:
-\nopagebreak
+Collaboration diagram for scripts.\+osu\+\_\+modules.\+nav.\+planner.\+Road\+Option\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
