--- a/carla_dynamics_plugin/scripts/latex/d6/dbe/classtest__AV__control_1_1AV.tex
+++ b/carla_dynamics_plugin/scripts/latex/d6/dbe/classtest__AV__control_1_1AV.tex
@@ -7,8 +7,7 @@
 
 
 
-Inheritance diagram for test\+\_\+\+A\+V\+\_\+control.\+AV\+:
-\nopagebreak
+Inheritance diagram for test\+\_\+\+A\+V\+\_\+control.\+AV\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -17,8 +16,7 @@ Inheritance diagram for test\+\_\+\+A\+V\+\_\+control.\+AV\+:
 \end{figure}
 
 
-Collaboration diagram for test\+\_\+\+A\+V\+\_\+control.\+AV\+:
-\nopagebreak
+Collaboration diagram for test\+\_\+\+A\+V\+\_\+control.\+AV\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
